# ac

./: CLAUDE.md  Cargo.toml  README.md
crates/ac-acp/: Cargo.toml
crates/ac-acp/src/: lib.rs
crates/ac-acp/tests/: acp.rs
crates/ac-ai-sdk/: Cargo.toml
crates/ac-ai-sdk/src/: lib.rs  main.rs  tools.rs
crates/ac-ai-sdk/tests/: restart_continuity.rs
crates/ac-approvals/: Cargo.toml
crates/ac-approvals/src/: command.rs  engine.rs  lib.rs  policy.rs  verdict.rs
crates/ac-cli/: Cargo.toml
crates/ac-cli/src/: lib.rs  main.rs
crates/ac-cli/tests/: e2e.rs  forced_chain.rs  restart_continuity.rs  skills_full.rs  subagents.rs
crates/ac-context/: Cargo.toml
crates/ac-context/src/: catalog.rs  fragment.rs  lib.rs  reactive.rs  registry.rs  state.rs
crates/ac-mcp/: Cargo.toml
crates/ac-mcp/src/: lib.rs
crates/ac-mcp/tests/: live_child_process.rs  mcp.rs
crates/ac-provider/: Cargo.toml
crates/ac-provider-mock/: Cargo.toml
crates/ac-provider-mock/src/: lib.rs
crates/ac-provider-openrouter/: Cargo.toml
crates/ac-provider-openrouter/src/: lib.rs
crates/ac-provider-openrouter/tests/: live_web_search.rs
crates/ac-provider/src/: lib.rs
crates/ac-rollout/: Cargo.toml
crates/ac-rollout/src/: item.rs  lib.rs
crates/ac-rollout/tests/: durability.rs  rollout.rs
crates/ac-runtime/: Cargo.toml
crates/ac-runtime/src/: compaction.rs  fragments.rs  hooks.rs  lib.rs  spawn.rs  steer.rs
crates/ac-runtime/tests/: compaction.rs  loop.rs  reactive.rs  steer.rs  subagents.rs
crates/ac-sandbox/: Cargo.toml
crates/ac-sandbox/src/: lib.rs  linux.rs  macos.rs  rlimit.rs
crates/ac-sandbox/tests/: smoke_linux.rs  smoke_macos.rs
crates/ac-skills/: Cargo.toml
crates/ac-skills/src/: catalog.rs  frontmatter.rs  inject.rs  lib.rs  mention.rs  resolver.rs  tool.rs
crates/ac-skills/tests/: skills.rs
crates/ac-store/: Cargo.toml
crates/ac-store/src/: lib.rs
crates/ac-store/tests/: durability.rs  rehydrate.rs
crates/ac-tool/: Cargo.toml
crates/ac-tool/src/: agent.rs  ctx.rs  lib.rs  policy.rs  registry.rs  sandbox.rs  tool.rs
crates/ac-tools/: Cargo.toml
crates/ac-tools/src/: fetch.rs  files.rs  lib.rs  search.rs  shell.rs  task.rs
crates/ac-types/: Cargo.toml
crates/ac-types/src/: content.rs  effort.rs  error.rs  event.rs  lib.rs  marker.rs  tool.rs
crates/ac-web/: Cargo.toml
crates/ac-web/src/: main.rs
crates/ac-web/ui/: index.html
docs/: ac-approvals.md  ac-compaction.md  ac-context.md  ac-durability.md  ac-events.md  ac-fork.md  ac-goals.md  ac-hooks.md  ac-loop.md  ac-mcp.md  ac-provider.md  ac-queue-steer.md  ac-sandbox.md  ac-security.md  ac-serving.md  ac-skills.md  ac-subagents.md  ac-testing.md  ac-tools.md  ac-ultra.md  architecture.md
examples/web-react/: README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  verify.mjs  vite.config.ts
examples/web-react/src/: App.tsx  index.css  main.tsx  styles.css
examples/web-react/src/components/: chat.tsx  message-view.tsx  tool-views.tsx
examples/web-react/src/lib/: format.ts
