[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
publish = false
license = "Apache-2.0"

[workspace.dependencies]
ac-types = { path = "crates/ac-types" }
ac-ai-sdk = { path = "crates/ac-ai-sdk" }
ac-provider = { path = "crates/ac-provider" }
ac-provider-openrouter = { path = "crates/ac-provider-openrouter" }
ac-provider-mock = { path = "crates/ac-provider-mock" }
ac-tool = { path = "crates/ac-tool" }
ac-tools = { path = "crates/ac-tools" }
ac-runtime = { path = "crates/ac-runtime" }
ac-skills = { path = "crates/ac-skills" }
ac-mcp = { path = "crates/ac-mcp" }
ac-sandbox = { path = "crates/ac-sandbox" }
ac-acp = { path = "crates/ac-acp" }
ac-cli = { path = "crates/ac-cli" }
ac-rollout = { path = "crates/ac-rollout" }
ac-context = { path = "crates/ac-context" }
ac-store = { path = "crates/ac-store" }
ac-web = { path = "crates/ac-web" }

# Official ACP SDK. The 1.x rewrite is young — tilde-pinned to the minor per
# the buy/build ledger; bump deliberately.
agent-client-protocol = "~1.2"
anyhow = "1"
async-stream = "0.3"
axum = { version = "0.8", features = ["ws"] }
eventsource-stream = "0.2"
futures = "0.3"
globset = "0.4"
libc = "0.2"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
# Official MCP Rust SDK (modelcontextprotocol org). Pinned to the major — they
# move fast between majors; bump deliberately, re-reading the changelog.
rmcp = { version = "2", default-features = false }
# Bundled so the store needs no system sqlite; single-user local files only.
# 0.37 (not latest): its libsqlite3-sys builds on rustc 1.92; 0.38+ needs 1.93+.
rusqlite = { version = "0.37", features = ["bundled"] }
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
uuid = { version = "1", features = ["v4", "v7"] }
walkdir = "2"
