[package]
name = "ac-acp"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
ac-provider.workspace = true
ac-runtime.workspace = true
ac-store.workspace = true
ac-tool.workspace = true
ac-types.workspace = true
agent-client-protocol.workspace = true
futures.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
uuid.workspace = true

[dev-dependencies]
ac-provider-mock.workspace = true
schemars.workspace = true
serde.workspace = true
tempfile.workspace = true
