[package]
name = "ac-ai-sdk"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true

# lib = the reusable, transport-free protocol adapter (AgentEvent <-> the
# Vercel AI SDK UI Message Stream Protocol). bin = a demo HTTP host that serves
# it to a stock `useChat` React app. The lib must stay axum-free so any host
# can reuse the mapping.

[lib]
name = "ac_ai_sdk"
path = "src/lib.rs"

[[bin]]
name = "ac-ai-sdk"
path = "src/main.rs"

[dependencies]
ac-runtime.workspace = true
ac-types.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true

# bin-only (kept out of the lib's dependency surface conceptually; Cargo can't
# scope per-target without features, so they build for both — the lib code
# imports none of them).
ac-cli.workspace = true
ac-provider.workspace = true
async-stream.workspace = true
ac-provider-openrouter.workspace = true
ac-store.workspace = true
ac-tool.workspace = true
anyhow.workspace = true
axum.workspace = true
base64 = "0.22"
futures.workspace = true
reqwest = { workspace = true }
schemars.workspace = true
tokio.workspace = true
tokio-util.workspace = true

[dev-dependencies]
ac-provider-mock.workspace = true
tempfile.workspace = true
