[package]
name = "ac-cli"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true

[lib]
name = "ac_cli"
path = "src/lib.rs"

[[bin]]
name = "ac"
path = "src/main.rs"

[dependencies]
ac-context = { workspace = true }
ac-runtime = { workspace = true }
ac-sandbox = { workspace = true }
ac-skills = { workspace = true }
ac-tool = { workspace = true }
ac-tools = { workspace = true }
ac-provider = { workspace = true }
ac-provider-openrouter = { workspace = true }
ac-types = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }

[dev-dependencies]
ac-provider-mock = { workspace = true }
ac-provider-openrouter = { workspace = true }
ac-store = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
tempfile = { workspace = true }
