[package]
name = "ac-provider-openrouter"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
ac-provider = { workspace = true }
ac-types = { workspace = true }
async-stream = { workspace = true }
eventsource-stream = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
