[package]
name = "ac-rollout"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
ac-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
