[package]
name = "ac-store"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
ac-types.workspace = true
rusqlite.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
ac-provider.workspace = true
ac-provider-mock.workspace = true
ac-runtime.workspace = true
ac-tool.workspace = true
serde_json.workspace = true
tempfile.workspace = true
tokio.workspace = true
