[package]
name = "ac-tool"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
ac-types = { workspace = true }
futures = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true }
