[package]
name = "ac-web"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
ac-acp.workspace = true
ac-cli.workspace = true
ac-provider.workspace = true
ac-provider-openrouter.workspace = true
ac-runtime.workspace = true
ac-store.workspace = true
ac-tool.workspace = true
anyhow.workspace = true
axum.workspace = true
futures.workspace = true
serde = { workspace = true }
serde_json.workspace = true
tokio.workspace = true
